tests/baselines/reference/collisionCodeGenModuleWithEnumMemberConflict.errors.txt
collisionCodeGenModuleWithEnumMemberConflict.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== collisionCodeGenModuleWithEnumMemberConflict.ts (1 errors) ====
    module m1 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        enum e {
            m1, 
            m2 = m1
        }
    }